--- a/backend/layouts/catch-to-collect/manifest.json
+++ b/backend/layouts/catch-to-collect/manifest.json
@@ -1,5 +1,18 @@
 {
-    "width": 360,
-    "height": 640,
-    "source": "index.html"
-  }
+  "replaceableAssets": [
+    { "title": "Bag Image", "type": "bag.png" },
+    { "title": "Cart Image", "type": "cart.png" },
+    { "title": "Item 1 Image", "type": "item1.png" },
+    { "title": "Item 2 Image", "type": "item2.png" },
+    { "title": "Item 3 Image", "type": "item3.png" },
+    { "title": "Item 4 Image", "type": "item4.png" },
+    { "title": "Item 5 Image", "type": "item5.png" },
+    { "title": "Item 6 Image", "type": "item6.png" },
+    { "title": "Item 7 Image", "type": "item7.png" },
+    { "title": "Item 8 Image", "type": "item8.png" },
+    { "title": "Logo Image", "type": "logo1.png" },
+    { "title": "Overlay 1 Image", "type": "overlay1.png" },
+    { "title": "Overlay 2 Image", "type": "overlay2-1.png" },
+    { "title": "Shelf Image", "type": "shelf.png" }
+  ]
+}
