Preview Overlay Timing is updated and other minor issues are fixed

--- a/frontend/src/data/layoutManifests.json
+++ b/frontend/src/data/layoutManifests.json
@@ -1,4 +1,4 @@
-{ "catch-to-collect":{
+{ "Catch-to-collect":{
   "replaceableAssets": [
     { "title": "Cart Image", "type": "cart.png" },
     { "title": "Item 1 Image", "type": "item1.png" },
